# Smart_lock_beta

./: platformio.ini
Controller/: platformio.ini
Controller/src/: ConnectWiFi.cpp  ConnectWiFi.h  ESPServer.cpp  ESPServer.h  main.cpp
Display_using_LovyanGFX/: platformio.ini
Display_using_LovyanGFX/include/: lgfx_ESP32_3248S035.h
Display_using_LovyanGFX/src/: main.cpp
Display_using_LovyanGFX/src/src_sql/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
Doorbell/: platformio.ini
Doorbell/src/: CMakeLists.txt  filelist.txt  main.cpp  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Doorbell/src/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
Doorbell/src/src/: CMakeLists.txt  filelist.txt  ui.c  ui.cpp  ui.h  ui_events.c  ui_events.cpp  ui_events.h  (+2 more)
Remote/: platformio.ini
Remote/src/: main.cpp
SquareLine/: klokke.sll  klokke.spj  klokke_events.py  remote.sll  remote.spj  remote_events.py
SquareLine/klokke_src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
SquareLine/remote_src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
SquareLine/remote_src/images/: ui_img_1048971941.c  ui_img_1114486417.c  ui_img_1999303404.c  ui_img_32757238.c
SquareLine/remote_src/screens/: ui_add_passcode_screen.c  ui_adding_passcode_screen.c  ui_passcode_control_screen.c  ui_remove_passcode_screen.c  ui_removing_passcode_screen.c
dorbell cam/: platformio.ini
dorbell cam/src/: main.cpp
klokke_test/: platformio.ini
klokke_test/src/: main.cpp
src/: main.cpp
(+34 files in other folders)
